# AEGIS-Geospatial-View

./: .dockerignore  .gitignore  .tmp_matrix_address.json  .tmp_matrix_coordinates.json  .tmp_matrix_rerun.json  .tmp_matrix_results.json  README.md  docker-compose.yml  pyproject.toml  setup_and_maintenance.bat  start_on_windows.bat
app/server/: app.py  pyproject.toml
app/server/api/: chat.py  geospatial.py  geospatial_cameras.py  geospatial_layers.py  geospatial_sources.py  jobs.py  search.py
app/server/app/tests/: test_agent_pipeline.py  test_chat_model_library.py
app/server/common/: constants.py  logger.py  paths.py  time.py  types.py
app/server/configurations/: __init__.py  environment.py  management.py  settings.py  startup.py
app/server/domain/: catalog.py  chat.py  crypto.py  geographics.py  gibs.py  jobs.py  layers.py  settings.py  updater.py
app/server/domain/agent/: __init__.py  actions.py  catalog.py  decision.py  execution.py  extraction_schemas.py  policies.py  task_scope.py  tool_events.py  tools.py
app/server/domain/extraction/: __init__.py  models.py
app/server/domain/geospatial/: cache.py  health.py  ingestion.py  providers.py  registry.py  search.py  tiler.py  validation.py
app/server/domain/llm/: __init__.py  cache.py  model_settings.py  types.py
app/server/repositories/: chat_history.py  credential_material.py  credentials.py  manifest_embeddings.py  model_settings.py  session_catalog.py  session_details.py
app/server/repositories/catalog/: __init__.py  reference_loader.py  reference_repository.py  reference_seeder.py
app/server/repositories/database/: __init__.py  backend.py  contracts.py  initializer.py  orm_table_operations.py  postgres.py  sqlite.py
app/server/repositories/queries/: __init__.py  manifest_embeddings.py  session_catalog.py  session_details.py
app/server/repositories/schemas/: __init__.py  models.py
app/server/repositories/serialization/: __init__.py  serializer.py
app/server/services/: cryptography.py  job_state.py  jobs.py  sanitization.py  startup_validation.py
app/server/services/agent/: action_router.py  agent_pipeline.py  agent_tool_catalog_service.py  candidate_ranker.py  capability_retriever.py  chat_agent.py  executor.py  location_memory.py  location_render_agent.py  location_resolver.py  manifest_action_resolver.py  manifest_intent_resolver.py  map_data_fusion_agent.py  native_tool_loop.py  orchestrator.py  overlay_inference.py  overlay_resolution_agent.py  parser_service.py  policy_engine.py  response_builder.py  tool_executor.py  tool_loop_events.py  tool_manifest.py  tool_registry.py
app/server/services/catalog/: __init__.py  loader.py  reference_loader.py  reference_repository.py  reference_seeder.py
app/server/services/chat/: __init__.py  composition.py  history_buffer.py  history_service.py  maintenance_service.py  model_library.py  plain_responder.py  settings_service.py  streaming.py
app/server/services/geospatial/: api_service.py  attribution.py  cache.py  capability_registry.py  catalog.py  composition.py  coverage.py  elevation.py  endpoint_validation.py  gibs.py  gibs_errors.py  gibs_runtime.py  ingestion.py  layer_auditor.py  layers.py  live_validator.py  manifest_loader.py  maps.py  materialization_runner.py  nominatim.py  normalizers.py  openaq.py  openmeteo.py  osm_tiles.py  overpass.py  provider_account_setup_service.py  provider_credential_validation_service.py  provider_registry.py  pvgis.py  rainviewer.py  rendering.py  runtime_registry.py  search_index.py  source_health.py  tiler.py
app/server/services/llm/: base.py  cloud_catalog.py  context_budget.py  context_builder.py  deepseek_provider.py  errors.py  factory.py  google_provider.py  langchain_runtime.py  ollama.py  ollama_capability_cache.py  openai_provider.py  prompts.py  response_serialization.py  types.py
app/server/services/search/: composition.py  errors.py  execution.py  orchestrator.py  request_builder.py
app/server/services/updater/: gibs.py
app/server/services/vector/: chroma_store.py  (+4 more)
(+1081 files in other folders)
