[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "AEGIS"
version = "1.7.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.128.0",
    "uvicorn[standard]>=0.40.0",
    "numpy==2.4.1",
    "pandas==3.0.0",
    "tqdm==4.67.1",
    "SQLAlchemy==2.0.46",
    "psycopg[binary]==3.3.1",
    "python-dotenv==1.2.1",
    "folium==0.17.0",
    "pillow==12.0.0",
    "cryptography>=43.0.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-playwright>=0.5.0",
    "psutil>=6.1.1",
    "ruff==0.15.9"
]

[tool.hatch.build.targets.wheel]
packages = ["AEGIS"] 

[tool.pytest.ini_options]
pythonpath = ["."]

