[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "AEGIS"
version = "2.0.0"
requires-python = ">=3.14"

dependencies = [
    "fastapi==0.136.3",
    "uvicorn[standard]>=0.40.0",
    "tqdm==4.67.3",
    "SQLAlchemy==2.0.50",
    "psycopg[binary]==3.3.4",
    "python-dotenv==1.2.2",
    "folium==0.17.0",
    "pillow==12.2.0",
    "cryptography>=43.0.0",
    "chromadb>=0.5.0",
    "openai==2.38.0",
    "google-genai==1.73.1",
    "langchain-core==1.4.0",
    "langchain-ollama==1.1.0",
    "cachetools>=6.0.0",
    "httpx>=0.28.0",
    "pyproj>=3.7.0",
    "shapely>=2.1.0",
    "tenacity>=9.0.0",
    "protobuf>=6.33.0",
    "gtfs-realtime-bindings>=1.0.0",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0",
    "pytest-playwright>=0.5.0",
    "ruff==0.15.9"
]
geospatial-ingestion = [
    "duckdb>=1.4.0",
    "geopandas>=1.1.0",
    "pyogrio>=0.12.0",
    "rasterio>=1.4.0",
    "rtree>=1.4.0",
]

[tool.hatch.build.targets.wheel]
packages = ["server", "scripts"]

[tool.pytest.ini_options]
pythonpath = [".", ".."]

